Updated gitignore with .ideas.  Reduced card-footer-padding to prevent mobile break.  In dynamic-table, fixed spelling issue, reduced button size mobile, added table-layout-fixed to prevent overflow, ellipsed text on overflow. In main, reduced min to 305 for 320px screens.

--- a/app/components/dynamictable/dynamictable.scss
+++ b/app/components/dynamictable/dynamictable.scss
@@ -9,7 +9,7 @@
 
     &-filters {
         display: grid;
-        grid-template-colums: 1fr;
+        grid-template-columns: 1fr;
         grid-gap: 10px;
         @media screen and (min-width: $breakpoint-sm-min) {
             grid-auto-rows: 1fr;
@@ -30,6 +30,11 @@
 
         &-button {
             @include make-button($btn-color: $brand-primary);
+
+          @media all and (max-width: $breakpoint-sm-max) {
+            padding-left: 20px;
+            padding-right: 20px;
+          }
         }
     }
 
@@ -69,8 +74,11 @@
 
     &-main {
       border-collapse: collapse;
-      overflow: scroll;
       width: 100%;
+
+      @media all and (max-width: $breakpoint-sm-max) {
+        table-layout: fixed;
+      }
 
       thead {
         @media screen and (max-width: $breakpoint-xs-max) {
@@ -98,6 +106,8 @@
       td {
         @extend %table-row;
         padding: 10px;
+        overflow: hidden;
+        text-overflow: ellipsis;
         @media screen and (max-width:768px) {
           display: block;
         }
